Added button support to pi-display Modified skynet analyze

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@
 # Project setup
 ########################################################################
 cmake_minimum_required(VERSION 2.6)
-project(gr-bachelor CXX C)
+project(gr-SkynetSniffer CXX C)
 enable_testing()
 
 #select the release build type by default to get optimization flags
